fix(dividing lines): increase internal table spacing

--- a/Content/Styles/Divided/Site.scss
+++ b/Content/Styles/Divided/Site.scss
@@ -144,6 +144,10 @@ html, body {
 .answerContainer table {
     width: 100.2% !important;
 }
+
+.answerContainer p {
+    padding: 2px;
+}
   
 .tableItem {
     border:3px solid black;
